--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,11 +2,27 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+  
+    <div class="field">
+    <%= f.label :FullName, 'Full Name' %><br />
+    <%= f.text_field :full_name %>
+  </div>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :Email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
+
+  <div class="field">
+    <%= f.label :Phone %><br />
+    <%= f.text_field :phone %>
+  </div>
+   
+   <div class="field">
+    <%= f.label :Role %><br />
+    <%= f.text_field :role_id %>
+  </div>
+
 
   <div class="field">
     <%= f.label :password %>
