--- a/app/views/roles/index.html.erb
+++ b/app/views/roles/index.html.erb
@@ -3,5 +3,6 @@
 <%= role.name  %></br>
 <%= link_to "show", role %></br>
 <%end%>
-
+<% if can? :create, Role.new %>
 <%= link_to 'ADD Roles', new_role_path %>
+<%end%>
