--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,21 +4,39 @@
   <title>LeadToSale</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+  
+   
+   <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css"> 
+  <script src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"/></script>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"/></script>
+
+ <%= csrf_meta_tags %>
 </head>
 <body>
+   <div class = "container" >
+   <%= render './layouts/nav' %>
+
    <% if user_signed_in? %>
+   
 	<%= current_user.email %>
+  <%= link_to "Prospects", prospects_path %> | <%= link_to "Stages", stages_path %> |<%= link_to "Users", users_path %> |   <%= link_to "Customers", customers_path %>
+  
 	<%= link_to "Account Settings", edit_user_registration_path %> | 
 	<%= link_to "Logout", destroy_user_session_path, method: :delete %>
    <% else %>
-	<%= link_to "Login", new_user_session_path %> | <%= link_to "Register", new_user_registration_path %> 
+	<%= link_to "Login", new_user_session_path %>  <%#= link_to "Register", new_user_registration_path %> 
+
   <% end %>
+
+   
 
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
 <%= yield %>
-
+</div>
 </body>
 </html>
