--- a/app/views/prospects/edit.html.erb
+++ b/app/views/prospects/edit.html.erb
@@ -1,4 +1,35 @@
 <h2>Edit Prospect</h2>
-<%= render 'form' %>
- <%= link_to 'Show', @prospects %> |
+
+ 
+
+
+<%= form_for(@prospect) do |f| %>
+<div class="form-group">
+<%= f.label :FullName, 'Full Name' %>
+<%= f.text_field :full_name ,class: "form-control"%></br>
+</div>
+<div class="form-group">
+
+<%= f.label :Email %>
+<%= f.text_field :email ,class: "form-control"%></br>
+</div>
+<div class="form-group">
+
+<%= f.label :Phone %>
+<%= f.text_field :phone,class: "form-control" %></br>
+</div>
+<div class="form-group">
+
+<%= f.label :Location %>
+<%= f.text_field :location,class: "form-control" %></br>
+</div>
+<div class="form-group">
+
+<%= f.label :Stage %>
+<%= f.collection_select :stage_id, Stage.all,:id, :name, prompt: "Select Stage",class: "form-control"%></br>
+</div>
+
+<%= f.submit "submit", class: "btn btn-primary" %>
+  
+<%end%>
 <%= link_to 'Back', prospects_path %>
