--- a/app/views/stages/_form.html.erb
+++ b/app/views/stages/_form.html.erb
@@ -1,13 +1,19 @@
 <%= form_for(@stage) do |f| %>
+<div class="form-group">
 <%= f.label :Name %>
-<%= f.text_field :name %></br>
+<%= f.text_field :name, class:"form-control" %></br>
+</div>
+<div class="form-group">
 <%= f.label :Description %>
-<%= f.text_area :description %></br>
+<%= f.text_area :description, class:"form-control" %></br>
+</div>
+<div class="btn btn-info active">
 <%= f.label :Interest_level %>
 <%= f.radio_button :interest_level, 5 %> 5  
 <%= f.radio_button :interest_level, 4 %> 4  
 <%= f.radio_button :interest_level, 3 %> 3  
 <%= f.radio_button :interest_level, 2 %> 2  
 <%= f.radio_button :interest_level, 1 %> 1 <br> 
-<%= f.submit "submit" %>
+</div>
+<%= f.submit "submit",class:"btn btn-primary" %>
 <%end%>
