--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,46 +1,47 @@
-<h2>Sign up</h2>
+<%= form_for(@user, remote: true) do |f| %>
+<%# if @user.errors.any? %>
+    
+<%# end %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name),remote: true) do |f| %>
-  <%= devise_error_messages! %>
-  
-    <div class="field">
-    <%= f.label :FullName, 'Full Name' %><br />
-    <%= f.text_field :full_name %>
-    <span id="full_nameError"></span>
-  </div>
+<div class="form-group">
+  <%= f.label :FULLname %><br />
+  <%= f.text_field :full_name, class:"form-control",autofocus: true %>
+  <span id="full_nameError"></span>
+</div>
 
-  <div class="field">
-    <%= f.label :Email %><br/>
-    <%= f.email_field :email, autofocus: true %>
-    <span id="emailError"></span>
-  </div>
+<div class="form-group">
+  <%= f.label :email %><br />
+  <%= f.email_field :email,class:"form-control", autofocus: true %>
+  <span id="emailError"></span>
+</div>
 
-  <div class="field">
-    <%= f.label :Phone %><br/>
-    <%= f.text_field :phone %>
-    <span id="phoneError"></span>
-  </div>
-   
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-      <span id="passwordError"></span>
-  </div>
+<div class="form-group">
+  <%= f.label :phone %><br />
+  <%= f.text_field :phone, class:"form-control",autofocus: true %>
+   <span id="phoneError"></span>
+</div>
+<div class="form-group">
+  <%= f.label :password %>
+  <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+  <% end %><br />
+  <%= f.password_field :password,class:"form-control", autocomplete: "off" %>
+  <span id="passwordError"></span>
+</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-     <span id="passwordConfirmationError"></span>
-  </div>
+<div class="form-group"
+  <%= f.label :password_confirmation %><br />
+  <%= f.password_field :password_confirmation, class:"form-control",autocomplete: "off" %>
+   <span id="passwordConfirmationError"></span>
+</div>
 
-  <div class="actions" id="submit">
-    <%= f.submit  %>
-  </div>
-<% end %>
+  <%#= f.label :role_id %>
+  <%#= f.collection_select :role_id, Role.all, :id, :name  %>
 
+<div class="actions" id="submit">
+  <%= f.submit "Sign up", class: 'btn btn-primary' %>
+</div>
+<%end%>
 <script>  
    var alphabetFormatter = /^[A-Za-z]+$/;
    var emailFormatter = /^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$/;
@@ -161,8 +162,3 @@
 
 
    </script>
-
-            
-
-
-<%= render "devise/shared/links" %>
